VirtualMinecraft 1.0.1 — backported to Minecraft 1.20.1 (Java 17+)